# axiom-browser-agent-clone

./: .dockerignore  .env.example  .gitignore  .railwayignore  .replit  AI-food-deliveryOrdering.md  Dec-6-2025-masterBuildLogs.md  Dockerfile  Dockerfile.api  EXTRACT_ENDPOINT_SMOKE_TESTS.md  dec-18-MasterBuildLogs.md  dec-9-2025-masterBuildLogs.md  docker-compose.yml  pyproject.toml  railway.json  railway.toml  replit.md  requirements.txt  run_api.py
.cursor/: mcp.json
attached_assets/: Pasted--You-are-Replit-Agent-helping-me-build-V0-of-an-Axiom-s_1765072717113.txt
backend/: app.py  resume_generator.py  simulated_executor.py  workflow_parser.py
docs/selectors/: tn_v2_phases.md
frontend/: index.html  main.js  styles.css
services/: __init__.py
services/api/: __init__.py  app.py  config.py  food_delivery_executor.py  food_delivery_helpers.py  greenhouse_helpers.py  mcp_client.py  mcp_executor.py  mcp_runtime.py  proxy_sanity.py  tn_executor.py  tn_executor_v2.py
services/api/middleware/: __init__.py  extract_auth.py
services/api/routes/: __init__.py  element_picker.py  extract.py  food_delivery.py  health.py  resume.py  therapy_notes.py  therapy_notes_v2.py  workflow.py
shared/: __init__.py
shared/ai/: __init__.py  resume_generator.py  workflow_parser.py
shared/schemas/: __init__.py  execution.py  food_delivery.py  resume.py  therapy_notes.py  therapy_notes_v2.py  workflow.py
shared/utils/: __init__.py  logging.py
tests/: test_food_delivery.py
